DS-2433 by maikelkoopman: bug visibility of admin menu on mobile

--- a/themes/socialbase/components/asset-builds/css/admin-toolbar.css
+++ b/themes/socialbase/components/asset-builds/css/admin-toolbar.css
@@ -39,4 +39,12 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+
+  .toolbar-vertical .navbar-fixed-top {
+    position: relative;
+    z-index: 1;
+  }
+}
+
 /*# sourceMappingURL=admin-toolbar.css.map */
